add cws upload action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,12 @@ jobs:
           file: build/*
           tag: ${{ github.ref_name }}
           overwrite: true
+      - name: Update to Chrome Web Store
+        uses: mobilefirstllc/cws-publish@latest
+        with:
+          action: 'upload'
+          client_id: ${{ secrets.CLIENT_ID }}
+          client_secret: ${{ secrets.CLIENT_SECRET }}
+          refresh_token: ${{ secrets.REFRESH_TOKEN }}
+          extension_id: eaibhjlbakfdbmalpoefnpoaccijhgbh
+          zip_file: build/extension.zip
