--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,5 @@ parserOptions:
   sourceType: module
 rules:
   "@typescript-eslint/no-var-requires": 0
+  "@typescript-eslint/no-non-null-assertion": 0
+  "@typescript-eslint/no-explicit-any": 0
