--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@msgpack/msgpack": "^2.8.0",
+    "@types/thrift": "^0.10.11",
+    "@types/vue": "^2.0.0",
     "buffer": "^6.0.3",
     "element-plus": "^2.2.21",
     "moment": "^2.29.4",
@@ -14,10 +16,12 @@
     "stream-browserify": "^3.0.0",
     "thrift": "^0.17.0",
     "util": "^0.12.5",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@creditkarma/thrift-typescript": "^3.7.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "babel-loader": "^9.1.0",
@@ -36,6 +40,7 @@
     "typescript": "^4.9.3",
     "vue-loader": "^17.0.1",
     "vue-template-compiler": "^2.7.14",
+    "vue-tsc": "^1.0.9",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   }
