--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,29 @@
 {
     "compilerOptions": {
       "outDir": "./dist/",
-      "noImplicitAny": true,
-      "module": "es6",
+      "noImplicitAny": false,
+      "module": "esnext",
       "target": "es5",
       "jsx": "react",
       "allowJs": true,
-      "moduleResolution": "node"
-    }
+      "moduleResolution": "node",
+      "isolatedModules": true,
+      "strict": true,
+      "pretty": true,
+      "paths": {
+        "@/*": [
+          "./src/*"
+        ]
+      }
+    },
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.d.ts",
+      "src/**/*.tsx",
+      "src/**/*.vue",
+      "node_modules/element-plus/**/*.type.ts"
+    ],
+    "exclude": [
+      "node_modules"
+    ]
   }
